--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                     </button>
                     <button class="nav-button" onclick="showStats()">
                         <span>📊</span>
-                        <span>Статистика</span>
+                        <span>Стат.</span>
                     </button>
                     <button class="nav-button" onclick="showHelp()">
                         <span>❓</span>
