--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                     </button>
                     <button class="nav-button" onclick="showStats()">
                         <span>📊</span>
-                        <span>Стат.</span>
+                        <span>Стат</span>
                     </button>
                     <button class="nav-button" onclick="showHelp()">
                         <span>❓</span>
@@ -1115,7 +1115,7 @@
                 
                 <div class="toolbar-group">
                     <button class="desktop-button" onclick="showInstructions()">Инструкция</button>
-                    <button class="desktop-button" onclick="showStats()">Статистика</button>
+                    <button class="desktop-button" onclick="showStats()">Стат.</button>
                     <button class="desktop-button danger" onclick="clearData()">Очистить</button>
                 </div>
                 
