--- a/index.html
+++ b/index.html
@@ -1035,13 +1035,13 @@
         }
         
         /* Desktop modal adjustments */
-        @media (min-width: 768px) {
+        /* @media (min-width: 768px) {
             .modal-content {
                 max-width: 500px;
                 max-height: 85vh;
                 border-radius: 16px;
                 margin: auto;
-            }
+            }*/
             
             .modal {
                 align-items: center;
